--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victor Dumetz</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#"><h1 id="name">Victor Dumetz</h1></a>
+      <nav id="navigation-bar">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
