--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,38 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section id="tagline">
+        <p>
+          Hello, my name is<br /><em id="tagline-name">Victor Dumetz</em
+          ><br />I'm a <em id="tagline-job">Data Scientist</em> and avid
+          tinkerer.
+        </p>
+      </section>
+      <section id="about">
+        <h2>
+          About Me
+          <hr />
+        </h2>
+      </section>
+      <section id="skills">
+        <h2>
+          Skills
+          <hr />
+        </h2>
+      </section>
+      <section id="projects">
+        <h2>
+          Projects
+          <hr />
+        </h2>
+      </section>
+      <section id="contact">
+        <h2>
+          Contact
+          <hr />
+        </h2>
+      </section>
+    </main>
   </body>
 </html>
