--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet" />
     <title>Victor Dumetz</title>
   </head>
   <body>
