Fix padding of anchors in the navigation bar
The padding was applied to the <li> elements instead of the anchor. By
applying it to the <a> elements directly, we make the clickable area
wider.

--- a/static/styles.css
+++ b/static/styles.css
@@ -54,10 +54,13 @@ header {
   justify-content: center;
 }
 
-#navigation-bar ul li {
-  padding: 10px;
+#navigation-bar li {
   margin: 0 10px;
   list-style-type: none;
+}
+
+#navigation-bar a {
+  padding: 10px;
 }
 
 main {
