--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,7 @@
 :root {
   --header-height: 8vh;
-  --onyx: #393e41;
+  --opacity-level-1: 0.1;
+  --opacity-level-2: 0.4;
 }
 
 html {
@@ -69,7 +70,6 @@ main {
 
 section {
   height: calc(100vh - var(--header-height));
-  overflow: auto;
   padding: 0 72px;
   padding-bottom: 18px;
   display: flex;
@@ -95,6 +95,11 @@ section h2 hr {
   border: 1px solid black;
 }
 
+section p {
+  margin: 1.2em 0;
+  font-size: 1.2em;
+}
+
 section .see-more {
   align-self: flex-end;
   padding: 6px;
@@ -118,4 +123,145 @@ section .see-more {
 
 #tagline-name {
   font-size: 1.5em;
+}
+
+#about-section-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#about-section-content > * {
+  flex: 1 1 auto;
+}
+
+#i-like {
+  display: flex;
+  flex: 0 0 50%;
+  justify-content: center;
+  align-items: center;
+  font-size: 3em;
+  overflow: hidden;
+}
+
+#i-like ul {
+  flex: 0 0 70%;
+}
+
+#i-like li {
+  list-style: none;
+}
+
+#i-like li:nth-child(1),
+#i-like li:nth-last-child(1) {
+  opacity: 0;
+}
+
+#i-like li:nth-child(2),
+#i-like li:nth-last-child(2) {
+  opacity: var(--opacity-level-1);
+}
+
+#i-like li:nth-child(3),
+#i-like li:nth-last-child(3) {
+  opacity: var(--opacity-level-2);
+}
+
+#i-like li:nth-child(2) {
+  animation:
+    translate-up 1s,
+    opacity-1-0 1s;
+}
+
+#i-like li:nth-child(3) {
+  animation:
+    translate-up 1s,
+    opacity-2-1 1s;
+}
+
+#i-like li:nth-child(4) {
+  animation:
+    translate-up 1s,
+    opacity-3-2 1s;
+}
+
+#i-like li:nth-last-child(3) {
+  animation:
+    translate-up 1s,
+    opacity-2-3 1s;
+}
+
+#i-like li:nth-last-child(2) {
+  animation:
+    translate-up 1s,
+    opacity-1-2 1s;
+}
+
+#i-like li:nth-last-child(1) {
+  animation:
+    translate-up 1s,
+    opacity-0-1 1s;
+}
+
+@keyframes translate-up {
+  70% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+@keyframes opacity-0-1 {
+  70% {
+    opacity: 0;
+  }
+  100% {
+    opacity: var(--opacity-level-1);
+  }
+}
+
+@keyframes opacity-1-0 {
+  70% {
+    opacity: var(--opacity-level-1);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes opacity-1-2 {
+  70% {
+    opacity: var(--opacity-level-1);
+  }
+  100% {
+    opacity: var(--opacity-level-2);
+  }
+}
+
+@keyframes opacity-2-1 {
+  70% {
+    opacity: var(--opacity-level-2);
+  }
+  100% {
+    opacity: var(--opacity-level-1);
+  }
+}
+
+@keyframes opacity-2-3 {
+  70% {
+    opacity: var(--opacity-level-2);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes opacity-3-2 {
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: var(--opacity-level-2);
+  }
 }
