Reorganise templates, styles and routers
The directory structure has been reorganised to accomodate multiple
pages on the website.

Templates are now organised through a "page > partials" structure. CSS
styles have been split per page, with the addition of another file for
styling common to all pages. Routers are now organise so that there is a
single routing submodule per page.

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -9,7 +9,15 @@
       crossorigin="anonymous"
     ></script>
     <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet" />
+    <link
+      href="{{ url_for('static', path='/common-styles.css') }}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', path='/index-styles.css') }}"
+      rel="stylesheet"
+    />
+
     <title>Victor Dumetz</title>
   </head>
   <body>
