--- a/templates/resume/partials/education.html
+++ b/templates/resume/partials/education.html
@@ -1,19 +1,14 @@
-{% for attendance in attendances %}
+{% for attendance in education %}
 <li>
-  <div class="job-title-from-to">
+  <div class="experience-item-title">
     <h3>{{ attendance.content }}</h3>
     <div class="from-to">
       {{ attendance.year_month_from }} - {{ attendance.year_month_to }}
     </div>
   </div>
-  <div class="company-info">
-    <span class="company">{{ attendance.company_name }}</span> -
+  <div>
+    <span class="school-company">{{ attendance.school_name }}</span> -
     <span class="location">{{ attendance.location }}</span>
   </div>
-  <ul class="responsibilities">
-    {% for description in attendance.responsibilities %}
-    <li class="responsibility">{{ description }}</li>
-    {% endfor %}
-  </ul>
 </li>
 {% endfor %}
