Add "Certifications" and "Other" sections
The sections describe my certifications and hobbies.

--- a/templates/resume/resume.html
+++ b/templates/resume/resume.html
@@ -47,9 +47,9 @@
         <h2>Certifications</h2>
         <ul hx-get="/certifications" hx-trigger="load"></ul>
       </section>
-      <section id="other">
+      <section id="others">
         <h2>Other</h2>
-        <ul hx-get="/other" hx-trigger="load"></ul>
+        <ul hx-get="/others" hx-trigger="load"></ul>
       </section>
     </main>
   </body>
