Add "Skills" section
Create a skills section that quickly gives an overview of the skills I
have and some of the tools I am used to work with.

--- a/templates/index/partials/skills_section.html
+++ b/templates/index/partials/skills_section.html
@@ -1,1 +1,73 @@
-<p>I'm the content of the Skills section</p>
+<div id="skills-section-content">
+  <div id="machine-learning-skills">
+    Through my professional experiences and personal projects, I developed my
+    skills in various areas of machine learning:
+    <ul>
+      <li>understanding business goals</li>
+      <li>collecting, cleaning, and visualising data</li>
+      <li>training and implementing models</li>
+      <li>presenting results to various stakeholders</li>
+      <li>data pipelines</li>
+      <li>experimental design</li>
+      <li>statistical modelling</li>
+      <li>observational studies</li>
+      <li>supervised/unsupervised learning</li>
+      <li>deep learning</li>
+    </ul>
+  </div>
+  <div id="programming-languages-and-tools">
+    Some programming languages and tools I am familiar with:
+    <ul id="skills-list">
+      <li>
+        SQL
+        <ul>
+          <li>Redshift</li>
+          <li>MySQL</li>
+        </ul>
+      </li>
+      <li>
+        Python
+        <ul>
+          <li>TensorFlow</li>
+          <li>scikit-learn</li>
+          <li>pandas</li>
+          <li>SciPy</li>
+          <li>Matplotlib</li>
+          <li>Jupyter</li>
+          <li>FastAPI</li>
+        </ul>
+      </li>
+      <li>Airflow</li>
+      <li>
+        R
+        <ul>
+          <li>Shiny</li>
+        </ul>
+      </li>
+      <li>
+        JavaScript
+        <ul>
+          <li>Google Apps Script</li>
+        </ul>
+      </li>
+      <li>
+        HTML
+        <ul>
+          <li>HTMX</li>
+          <li>Jinja</li>
+        </ul>
+      </li>
+      <li>CSS</li>
+      <li>
+        Excel
+        <ul>
+          <li>VBA</li>
+        </ul>
+      </li>
+      <li>Tableau</li>
+      <li>GitHub</li>
+      <li>Makefile</li>
+      <li>neovim</li>
+    </ul>
+  </div>
+</div>
