--- a/templates/index/partials/projects_section.html
+++ b/templates/index/partials/projects_section.html
@@ -1,1 +1,2 @@
-<p>I'm the content of the Projects section</p>
+<p>Here is a selection of some of the personal projects I worked on:</p>
+<ul id="projects-list" hx-get="/projects-preview-list" hx-trigger="load"></ul>
