Add "Contact" section
The contact the section contains links to my socials as well as a
contact form.

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -8,6 +8,7 @@
       integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
     <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
     <link
       href="{{ url_for('static', path='/common-styles.css') }}"
