--- a/templates/index/partials/contact_section.html
+++ b/templates/index/partials/contact_section.html
@@ -1,1 +1,10 @@
-<p>I'm the content of the Contact section</p>
+<div>
+  <ul class="socials">
+    <li><a href="https://www.linkedin.com/in/victor-dumetz/">LinkedIn</a></li>
+    <li><a href="https://github.com/victordumetz">GitHub</a></li>
+    <li><a href="https://www.kaggle.com/victordumetz">Kaggle</a></li>
+    <li><a href="mailto:vic.dum@orange.fr">vic.dum@orange.fr</a></li>
+    <li>524 rue de la Lys<br />62350 Saint-Floris<br />France</li>
+  </ul>
+</div>
+<div hx-get="/contact-form" hx-trigger="load" hx-ext="response-targets"></div>
