--- a/static/index-styles.css
+++ b/static/index-styles.css
@@ -272,3 +272,52 @@ section p {
   margin: 0;
   font-size: 1em;
 }
+
+#contact .section-content {
+  width: 100%;
+  padding: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#contact .socials {
+  padding: 12px;
+}
+
+#contact .socials li {
+  padding: 6px;
+  margin: 12px;
+  list-style: none;
+}
+
+#contact-form {
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.input-container {
+  width: 100%;
+  min-width: 30vw;
+  max-width: 500px;
+}
+
+.error-message {
+  color: #cc0000;
+}
+
+input,
+textarea {
+  width: 100%;
+  font-size: 1rem;
+}
+
+textarea {
+  resize: none;
+  height: 5rem;
+}
+
+.invalid {
+  box-shadow: 0 0 3px #cc0000;
+}
