--- a/templates/index/partials/contact_form.html
+++ b/templates/index/partials/contact_form.html
@@ -24,3 +24,8 @@
   ></div>
   <button type="submit">Send</button>
 </form>
+{% if success %}
+<div class="popup auto-close">
+  Thank you for contacting me!<br />I will get back to you as soon as possible.
+</div>
+{% endif %}
