--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -11,11 +11,11 @@
     <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
     <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
     <link
-      href="{{ url_for('static', path='/common-styles.css') }}"
+      href="{{ url_for('static', path='/common_styles.css') }}"
       rel="stylesheet"
     />
     <link
-      href="{{ url_for('static', path='/index-styles.css') }}"
+      href="{{ url_for('static', path='/index_styles.css') }}"
       rel="stylesheet"
     />
 
