--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -10,11 +10,11 @@
     ></script>
     <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
     <link
-      href="{{ url_for('static', path='/common-styles.css') }}"
+      href="{{ url_for('static', path='/common_styles.css') }}"
       rel="stylesheet"
     />
     <link
-      href="{{ url_for('static', path='/projects-styles.css') }}"
+      href="{{ url_for('static', path='/projects_styles.css') }}"
       rel="stylesheet"
     />
 
