--- a/templates/resume/resume.html
+++ b/templates/resume/resume.html
@@ -10,11 +10,11 @@
     ></script>
     <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
     <link
-      href="{{ url_for('static', path='/common-styles.css') }}"
+      href="{{ url_for('static', path='/common_styles.css') }}"
       rel="stylesheet"
     />
     <link
-      href="{{ url_for('static', path='/resume-styles.css') }}"
+      href="{{ url_for('static', path='/resume_styles.css') }}"
       rel="stylesheet"
     />
     <title>Victor Dumetz - Resume</title>
