--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -8,13 +8,16 @@
       integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ"
       crossorigin="anonymous"
     ></script>
-    <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
     <link
-      href="{{ url_for('static', path='/common_styles.css') }}"
+      href="{{ url_for('static', path='/css/reset.css') }}"
       rel="stylesheet"
     />
     <link
-      href="{{ url_for('static', path='/projects_styles.css') }}"
+      href="{{ url_for('static', path='/css/common_styles.css') }}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', path='/css/projects_styles.css') }}"
       rel="stylesheet"
     />
 
