--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -9,13 +9,16 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
-    <link href="{{ url_for('static', path='/reset.css') }}" rel="stylesheet" />
     <link
-      href="{{ url_for('static', path='/common_styles.css') }}"
+      href="{{ url_for('static', path='/css/reset.css') }}"
       rel="stylesheet"
     />
     <link
-      href="{{ url_for('static', path='/index_styles.css') }}"
+      href="{{ url_for('static', path='/css/common_styles.css') }}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', path='/css/index_styles.css') }}"
       rel="stylesheet"
     />
 
