Add tagline style

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -60,8 +60,14 @@
     <main>
       <section id="tagline">
         <p>
-          Hello, my name is<br /><em id="tagline-name">Victor Dumetz</em
-          ><br />I'm a <em id="tagline-job">Data Scientist</em> and avid
+          Hello, my name is<br /><em
+            id="tagline-name"
+            class="font-display font-size-2em"
+            >Victor Dumetz</em
+          ><br />I'm a<em class="font-display font-size-1-2em">
+            Data Scientist</em
+          >, self-taught
+          <em class="font-display font-size-1-2em"> Web Developer </em>and avid
           tinkerer.
         </p>
       </section>
